src/tests/snapshots/synoik__tests__window_opening__check_target_size@fsF-omT-ofT-dwF1000-dhF500-wfsBN.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: false\nopen maximized: true\nopen floating: true\ndefault column width: F1000\ndefault window height: F500\nwant fullscreen: BN"
expression: snapshot
---
initial configure:
size: 1000 × 500, bounds: 1280 × 720, states: []

post-map configures:
size: 1 × 1, bounds: 1280 × 720, states: [Activated]
